Enabling PRE-30-PD tallysheet and html reporting
