# orm/entities/SubmissionVersion/TallySheetVersion/TallySheetVersion_PRE_30_PD.py
@@ -1,0 +1,176 @@
+from flask import render_template
+from sqlalchemy.ext.hybrid import hybrid_property
+from sqlalchemy.orm import relationship
+from sqlalchemy import func, and_
+
+from app import db
+from exception import NotFoundException
+from orm.entities import Area, Candidate, Party, Submission
+from orm.entities.Election import ElectionCandidate
+from orm.entities.SubmissionVersion import TallySheetVersion
+from orm.entities.TallySheetVersionRow import TallySheetVersionRow_PRE_30_PD
+from util import get_paginated_query
+
+from orm.entities.Submission import TallySheet
+from orm.enums import TallySheetCodeEnum, AreaTypeEnum
+
+
+class TallySheetVersion_PRE_30_PD_Model(TallySheetVersion.Model):
+
+    def __init__(self, tallySheetId):
+        super(TallySheetVersion_PRE_30_PD_Model, self).__init__(
+            tallySheetId=tallySheetId
+        )
+
+    __mapper_args__ = {
+        'polymorphic_identity': TallySheetCodeEnum.PRE_30_PD
+    }
+
+    def add_row(self, countingCentreId, candidateId, count):
+        from orm.entities.TallySheetVersionRow import TallySheetVersionRow_PRE_30_PD
+
+        TallySheetVersionRow_PRE_30_PD.create(
+            tallySheetVersionId=self.tallySheetVersionId,
+            candidateId=candidateId,
+            countingCentreId=countingCentreId,
+            count=count
+        )
+
+    # content = relationship("TallySheetVersionRow_PRE_30_PD_Model")
+
+    @hybrid_property
+    def content(self):
+        countingCentres = self.submission.area.get_associated_areas(AreaTypeEnum.CountingCentre)
+
+        return db.session.query(
+            ElectionCandidate.Model.candidateId,
+            Candidate.Model.candidateName,
+            Area.Model.areaId.label("countingCentreId"),
+            Area.Model.areaName.label("countingCentreName"),
+            func.sum(TallySheetVersionRow_PRE_30_PD.Model.count).label("count"),
+        ).join(
+            Candidate.Model,
+            Candidate.Model.candidateId == ElectionCandidate.Model.candidateId
+        ).join(
+            Party.Model,
+            Party.Model.partyId == ElectionCandidate.Model.partyId
+        ).join(
+            Area.Model,
+            and_(
+                Area.Model.electionId == ElectionCandidate.Model.electionId,
+                Area.Model.areaId.in_([area.areaId for area in countingCentres])
+            )
+        ).join(
+            TallySheetVersionRow_PRE_30_PD.Model,
+            and_(
+                TallySheetVersionRow_PRE_30_PD.Model.tallySheetVersionId == self.tallySheetVersionId,
+                TallySheetVersionRow_PRE_30_PD.Model.countingCentreId == Area.Model.areaId,
+                TallySheetVersionRow_PRE_30_PD.Model.candidateId == ElectionCandidate.Model.candidateId
+            ),
+            isouter=True
+        ).filter(
+            ElectionCandidate.Model.electionId == self.submission.electionId
+        ).group_by(
+            ElectionCandidate.Model.candidateId,
+            Area.Model.areaId
+        ).order_by(
+            ElectionCandidate.Model.candidateId,
+            Area.Model.areaId
+        ).all()
+
+    def html(self):
+
+        content = {
+            "data": [],
+            "countingCentres": [],
+            "validVotes": [],
+            "rejectedVotes": [],
+            "totalVotes": []
+        }
+
+        parties = self.submission.election.parties
+        queryResult = self.content
+        countingCentreCount = int(len(queryResult) / len(parties))
+
+        # Fill the validVotes, rejectedVotes and totalVotes with zeros.
+        for i in range(0, countingCentreCount):
+            content["countingCentres"].append(queryResult[i].countingCentreName)
+
+            content["validVotes"].append(0)
+            content["rejectedVotes"].append(0)
+            content["totalVotes"].append(0)
+
+        # Iterate by candidates.
+        for i in range(len(parties)):
+            # Append candidate details.
+            data_row = [i + 1, queryResult[i * countingCentreCount].candidateName]
+            content["data"].append(data_row)
+            total_count_per_candidate = 0
+
+            # Iterate by counting centres.
+            for j in range(countingCentreCount):
+                # Determine the result index mapping with the counting centre and candidate.
+                query_result_index = (i * countingCentreCount) + j
+
+                count = queryResult[query_result_index].count
+
+                if count is None:
+                    data_row.append("")
+                else:
+                    # Append the count of votes of the counting centre.
+                    data_row.append(count)
+
+                    # Calculate the candidate wise total votes.
+                    total_count_per_candidate = total_count_per_candidate + count
+
+                    # Calculate valid votes count.
+                    content["validVotes"][j] = content["validVotes"][j] + count
+
+                    # Calculate validVotes count.
+                    content["rejectedVotes"][j] = 0  # TODO
+
+                    content["totalVotes"][j] = content["validVotes"][j] + content["rejectedVotes"][j]
+
+            data_row.append(total_count_per_candidate)
+
+        content["validVotes"].append(sum(content["validVotes"]))
+        content["rejectedVotes"].append(sum(content["rejectedVotes"]))
+        content["totalVotes"].append(sum(content["totalVotes"]))
+
+        html = render_template(
+            'PRE-30-PD.html',
+            content=content
+        )
+
+        return html
+
+
+Model = TallySheetVersion_PRE_30_PD_Model
+
+
+def get_all(tallySheetId):
+    query = Model.query.filter(Model.tallySheetId == tallySheetId)
+
+    result = get_paginated_query(query).all()
+
+    return result
+
+
+def get_by_id(tallySheetId, tallySheetVersionId):
+    tallySheet = TallySheet.get_by_id(tallySheetId=tallySheetId)
+    if tallySheet is None:
+        raise NotFoundException("Tally sheet not found. (tallySheetId=%d)" % tallySheetId)
+    elif tallySheet.tallySheetCode is not TallySheetCodeEnum.PRE_30_PD:
+        raise NotFoundException("Requested version not found. (tallySheetId=%d)" % tallySheetId)
+
+    result = Model.query.filter(
+        Model.tallySheetVersionId == tallySheetVersionId
+    ).one_or_none()
+
+    return result
+
+
+def create(tallySheetId):
+    result = Model(tallySheetId=tallySheetId)
+
+    return result
