# orm/entities/SubmissionVersion/TallySheetVersion/TallySheetVersion_PRE_ALL_ISLAND_RESULT.py
@@ -1,0 +1,66 @@
+from sqlalchemy.ext.hybrid import hybrid_property
+from sqlalchemy.orm import relationship
+
+from app import db
+from exception import NotFoundException
+from orm.entities import Candidate, Party
+from orm.entities.Election import ElectionCandidate
+from orm.entities.SubmissionVersion import TallySheetVersion
+from orm.entities.TallySheetVersionRow import TallySheetVersionRow_PRE_41
+from util import get_paginated_query
+
+from orm.entities.Submission import TallySheet
+from orm.enums import TallySheetCodeEnum
+from sqlalchemy import and_
+
+
+class TallySheetVersion_PRE_ALL_ISLAND_RESULT_Model(TallySheetVersion.Model):
+
+    def __init__(self, tallySheetId):
+        super(TallySheetVersion_PRE_ALL_ISLAND_RESULT_Model, self).__init__(
+            tallySheetId=tallySheetId
+        )
+
+    __mapper_args__ = {
+        'polymorphic_identity': TallySheetCodeEnum.PRE_ALL_ISLAND_RESULTS
+    }
+
+    def add_row(self, candidateId, count):
+        from orm.entities.TallySheetVersionRow import TallySheetVersionRow_PRE_ALL_ISLAND_RESULT
+
+        TallySheetVersionRow_PRE_41.create(
+            tallySheetVersionId=self.tallySheetVersionId,
+            candidateId=candidateId,
+            count=count
+        )
+
+
+Model = TallySheetVersion_PRE_ALL_ISLAND_RESULT_Model
+
+
+def get_all(tallySheetId):
+    query = Model.query.filter(Model.tallySheetId == tallySheetId)
+
+    result = get_paginated_query(query).all()
+
+    return result
+
+
+def get_by_id(tallySheetId, tallySheetVersionId):
+    tallySheet = TallySheet.get_by_id(tallySheetId=tallySheetId)
+    if tallySheet is None:
+        raise NotFoundException("Tally sheet not found. (tallySheetId=%d)" % tallySheetId)
+    elif tallySheet.tallySheetCode is not TallySheetCodeEnum.PRE_41:
+        raise NotFoundException("Requested version not found. (tallySheetId=%d)" % tallySheetId)
+
+    result = Model.query.filter(
+        Model.tallySheetVersionId == tallySheetVersionId
+    ).one_or_none()
+
+    return result
+
+
+def create(tallySheetId):
+    result = Model(tallySheetId=tallySheetId)
+
+    return result
